--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
+    "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
