--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-toastify": "^9.1.1",
     "sass": "^1.62.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
