--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux-persist-transform-encrypt": "^4.0.0",
     "sass": "^1.62.0",
     "typescript": "^4.9.5",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
